Add service icon to breadcrumb

--- a/src/styles/components/icons/styles.less
+++ b/src/styles/components/icons/styles.less
@@ -1,6 +1,7 @@
 & when (@icon-enabled) {
 
   .icon {
+    position: relative;
 
     svg {
       display: block;
@@ -20,7 +21,6 @@
 
     &.icon-app-container {
       border-radius: 20%;
-      position: relative;
 
       &:after {
         border-radius: 20%;
@@ -32,6 +32,14 @@
         position: absolute;
         top: 0;
         width: 100%;
+      }
+    }
+
+    &.icon-circle {
+
+      &,
+      &:after {
+        border-radius: 100%;
       }
     }
 
