--- a/src/styles/components/page-header/variables.less
+++ b/src/styles/components/page-header/variables.less
@@ -121,3 +121,9 @@
 @page-header-breadcrumbs-tall-margin-bottom-scale: 2;
 
 @page-header-breadcrumbs-link-color: color-lighten(@neutral, 0);
+
+@page-header-breadcrumb-item-icon-container-padding-left: @icon-small-width + @base-spacing-unit * 1/4;
+@page-header-breadcrumb-item-icon-container-padding-left-screen-small: @icon-small-width + @base-spacing-unit-screen-small * 1/4;
+@page-header-breadcrumb-item-icon-container-padding-left-screen-medium: @icon-small-width + @base-spacing-unit-screen-medium * 1/4;
+@page-header-breadcrumb-item-icon-container-padding-left-screen-large: @icon-small-width + @base-spacing-unit-screen-large * 1/4;
+@page-header-breadcrumb-item-icon-container-padding-left-screen-jumbo: @icon-small-width + @base-spacing-unit-screen-jumbo * 1/4;
