--- a/src/styles/components/dropdown-menus/variables.less
+++ b/src/styles/components/dropdown-menus/variables.less
@@ -1,1 +1,20 @@
 @dropdown-menu-enabled: true;
+
+@dropdown-menu-header-margin-top: @base-spacing-unit * 1/2;
+@dropdown-menu-header-margin-top-screen-small: @base-spacing-unit-screen-small * 1/2;
+@dropdown-menu-header-margin-top-screen-medium: @base-spacing-unit-screen-medium * 1/2;
+@dropdown-menu-header-margin-top-screen-large: @base-spacing-unit-screen-large * 1/2;
+@dropdown-menu-header-margin-top-screen-jumbo: @base-spacing-unit-screen-jumbo * 1/2;
+
+@dropdown-menu-header-padding-vertical: 0;
+@dropdown-menu-header-padding-vertical-screen-small: 0;
+@dropdown-menu-header-padding-vertical-screen-medium: 0;
+@dropdown-menu-header-padding-vertical-screen-large: 0;
+@dropdown-menu-header-padding-vertical-screen-jumbo: 0;
+
+@dropdown-menu-header-padding-horizontal: @dropdown-menu-header-padding-right;
+@dropdown-menu-header-padding-horizontal-screen-small: @dropdown-menu-header-padding-horizontal;
+@dropdown-menu-header-padding-horizontal-screen-medium: @dropdown-menu-header-padding-right-screen-medium;
+@dropdown-menu-header-padding-horizontal-screen-large: @dropdown-menu-header-padding-right-screen-large;
+@dropdown-menu-header-padding-horizontal-screen-jumbo: @dropdown-menu-header-padding-horizontal-screen-large;
+
