--- a/src/styles/components/user-account-dropdown/variables.less
+++ b/src/styles/components/user-account-dropdown/variables.less
@@ -1,5 +1,7 @@
 @user-dropdown-menu-enabled: true;
 
+@user-account-dropdown-menu-padding-top: 1rem;
+
 // TODO: Remove the small and jumbo media queries;
 @user-account-menu-button-height: calc(@button-height ~' - ' @body-line-height ~' + ' @icon-large-width);
 @user-account-menu-button-height-screen-small: @user-account-menu-button-height;
@@ -62,3 +64,21 @@
 @user-account-menu-height-screen-medium: @user-account-menu-items * (@user-account-menu-list-item-line-height-screen-medium + @user-account-menu-list-item-padding-vertical-screen-medium * 2) + @user-account-slider-list-padding-vertical-screen-medium * 2;
 @user-account-menu-height-screen-large: @user-account-menu-items * (@user-account-menu-list-item-line-height-screen-large + @user-account-menu-list-item-padding-vertical-screen-large * 2) + @user-account-slider-list-padding-vertical-screen-large * 2;
 @user-account-menu-height-screen-jumbo: @user-account-menu-items * (@user-account-menu-list-item-line-height-screen-jumbo + @user-account-menu-list-item-padding-vertical-screen-jumbo * 2) + @user-account-slider-list-padding-vertical-screen-jumbo * 2;
+
+@user-account-dropdown-menu-primary-padding-right: @base-spacing-unit * 1/4;
+@user-account-dropdown-menu-primary-padding-right-screen-small: @base-spacing-unit-screen-small * 1/4;
+@user-account-dropdown-menu-primary-padding-right-screen-medium: @base-spacing-unit-screen-medium * 1/4;
+@user-account-dropdown-menu-primary-padding-right-screen-large: @base-spacing-unit-screen-large * 1/4;
+@user-account-dropdown-menu-primary-padding-right-screen-jumbo: @base-spacing-unit-screen-jumbo * 1/4;
+
+@user-account-dropdown-menu-primary-margin-bottom: @base-spacing-unit * 1/8;
+@user-account-dropdown-menu-primary-margin-bottom-screen-small: @base-spacing-unit-screen-small * 1/8;
+@user-account-dropdown-menu-primary-margin-bottom-screen-medium: @base-spacing-unit-screen-medium * 1/8;
+@user-account-dropdown-menu-primary-margin-bottom-screen-large: @base-spacing-unit-screen-large * 1/8;
+@user-account-dropdown-menu-primary-margin-bottom-screen-jumbo: @base-spacing-unit-screen-jumbo * 1/8;
+
+@user-account-dropdown-menu-copy-text-margin-left: @base-spacing-unit * 1/4;
+@user-account-dropdown-menu-copy-text-margin-left-screen-small: @base-spacing-unit-screen-small * 1/4;
+@user-account-dropdown-menu-copy-text-margin-left-screen-medium: @base-spacing-unit-screen-medium * 1/4;
+@user-account-dropdown-menu-copy-text-margin-left-screen-large: @base-spacing-unit-screen-large * 1/4;
+@user-account-dropdown-menu-copy-text-margin-left-screen-jumbo: @base-spacing-unit-screen-jumbo * 1/4;
