fix(page header navigation): Fix page header navigation flex props

--- a/src/styles/components/page-header/navigation/styles.less
+++ b/src/styles/components/page-header/navigation/styles.less
@@ -95,6 +95,7 @@
 
         .page-header-content-section & {
           border-top: 1px solid @page-header-navigation-dropdown-border-color;
+          flex-grow: 1;
           margin-left: @page-header-navigation-dropdown-margin-left;
           margin-right: @page-header-navigation-dropdown-margin-right;
         }
