feat(DCOS-15921): Add tabs

--- a/plugins/design-system/styles/shame.less
+++ b/plugins/design-system/styles/shame.less
@@ -48,3 +48,9 @@
 .code-example-footer-content button {
   float: right;
 }
+
+.code-example-tab-container {
+  border-left: 1px solid #e5e5e5;
+  border-right: 1px solid #e5e5e5;
+  margin-bottom: 0;
+}
