refactor(DCOS-15921): Structure component example styling

--- a/plugins/design-system/styles/shame.less
+++ b/plugins/design-system/styles/shame.less
@@ -3,7 +3,9 @@
 // A place to put quick CSS iterations and cleanup later
 
 @import '../../../node_modules/codemirror/lib/codemirror.css';
-@import 'railscasts.css';
+@import './components/component-example/styles.less';
+@import './components/component-example/variables.less';
+@import './vendor/railscasts.css';
 
 // Do and don't styles
 // For green and red labels when showing examples
@@ -23,35 +25,4 @@
 .ds-dont {
   border-color: #f33745;
   color: #f33745;
-}
-
-.code-example-wrapper {
-  background-color: #fff;
-  border-left: 1px solid #e5e5e5;
-  border-right: 1px solid #e5e5e5;
-  display: flex;
-  flex-direction: column;
-  overflow: hidden;
-  padding: 10px;
-  position: relative;
-}
-
-.code-example-wrapper.header {
-  border-top: 1px solid #e5e5e5;
-  padding-top: 20px;
-}
-
-.code-example-wrapper.footer {
-  border-bottom: 1px solid #e5e5e5;
-}
-
-.code-example-footer-content button {
-  float: right;
-}
-
-.code-example-tab-container {
-  border-left: 1px solid #e5e5e5;
-  border-right: 1px solid #e5e5e5;
-  margin-bottom: 0;
-  padding-left: 10px;
 }
