--- a/plugins/design-system/styles/components/component-example/variables.less
+++ b/plugins/design-system/styles/components/component-example/variables.less
@@ -5,3 +5,7 @@
  */
 
 @component-example-border-color: #e5e5e5;
+@component-example-header-color: #fafbfc;
+@component-example-tab-color: #f3f3f4;
+@component-example-tab-active-color: #dadadb;
+@component-example-tab-active-text-color: #5b6171;
