feat(DCOS-15921): Stylize component example scroll bars

--- a/plugins/design-system/styles/shame.less
+++ b/plugins/design-system/styles/shame.less
@@ -6,6 +6,7 @@
 @import './components/component-example/styles.less';
 @import './components/component-example/variables.less';
 @import './vendor/railscasts.css';
+@import './vendor/simplescrollbars.css';
 
 // Do and don't styles
 // For green and red labels when showing examples
