feat(DCOS-15921): Change component example theme to One Dark

--- a/plugins/design-system/styles/shame.less
+++ b/plugins/design-system/styles/shame.less
@@ -5,7 +5,7 @@
 @import '../../../node_modules/codemirror/lib/codemirror.css';
 @import './components/component-example/styles.less';
 @import './components/component-example/variables.less';
-@import './vendor/railscasts.css';
+@import './vendor/one-dark.css';
 @import './vendor/simplescrollbars.css';
 
 // Do and don't styles
