--- a/plugins/design-system/styles/components/component-example/variables.less
+++ b/plugins/design-system/styles/components/component-example/variables.less
@@ -9,3 +9,4 @@
 @component-example-tab-color: #f3f3f4;
 @component-example-tab-active-color: #dadadb;
 @component-example-tab-active-text-color: #5b6171;
+@component-example-editor-color: hsl(220, 13%, 18%);
