refactor(DCOS-15921): Change tab click implementation

--- a/plugins/design-system/styles/components/component-example/styles.less
+++ b/plugins/design-system/styles/components/component-example/styles.less
@@ -51,6 +51,7 @@
     .code-example-tab {
       background: @component-example-tab-color;
       border: 1px solid @component-example-border-color;
+      cursor: pointer;
       height: 40px;
       margin-right: 0;
       margin-top: 15px;
