refactor(DCOS-15921): Clean up styles

--- a/plugins/design-system/styles/components/component-example/variables.less
+++ b/plugins/design-system/styles/components/component-example/variables.less
@@ -10,3 +10,5 @@
 @component-example-tab-active-color: #dadadb;
 @component-example-tab-active-text-color: #5b6171;
 @component-example-editor-color: hsl(220, 13%, 18%);
+@code-example-tab-height: 40px;
+@code-example-heading-top-padding: 10px;
