--- a/plugins/design-system/styles/shame.less
+++ b/plugins/design-system/styles/shame.less
@@ -1,7 +1,7 @@
 // Shame CSS
 
 // A place to put quick CSS iterations and cleanup later
-
+@import '../../../node_modules/cnvs/styles/cnvs.less';
 @import '../../../node_modules/codemirror/lib/codemirror.css';
 @import './components/component-example/styles.less';
 @import './components/component-example/variables.less';
