--- a/plugins/design-system/styles/components/component-example/styles.less
+++ b/plugins/design-system/styles/components/component-example/styles.less
@@ -1,7 +1,7 @@
 & when (@component-example-enabled) {
 
   .code-example-wrapper {
-    background-color: #fff;
+    background-color: @white;
     border-left: 1px solid @component-example-border-color;
     border-right: 1px solid @component-example-border-color;
     display: flex;
@@ -34,15 +34,20 @@
     }
   }
 
-  .code-example-tab-container {
+  .code-example-heading {
     background: @component-example-editor-color;
+    height: @code-example-tab-height;
     margin-bottom: 0;
-    padding-bottom: 20px;
+    padding-top: @code-example-heading-top-padding;
+
+    &.tabs {
+      height: @code-example-tab-height * 2;
+      padding-top: @code-example-heading-top-padding * 2;
+    }
 
     .tooltip-wrapper {
       float: right;
       margin-right: 15px;
-      margin-top: 15px;
     }
 
     .code-example-tab:first-child {
@@ -53,35 +58,32 @@
       background: @component-example-tab-color;
       border: 1px solid @component-example-border-color;
       cursor: pointer;
-      height: 40px;
+      height: @code-example-tab-height;
       margin-right: 0;
-      margin-top: 15px;
-      padding-left: 20px;
-      padding-right: 20px;
-      padding-top: 10px;
+      text-align: center;
+      width: @code-example-tab-height * 2;
 
       &.active {
         background: @component-example-tab-active-color;
 
         & > .menu-tabbed-item-label {
           color: @component-example-tab-active-text-color;
-
-          &:after {
-            background: @component-example-tab-active-color;
-          }
         }
       }
 
       .menu-tabbed-item-label {
+        align-items: center;
+        display: inline-flex;
+        min-height: @code-example-tab-height;
         padding-bottom: 0;
 
         &:hover {
           color: @component-example-tab-active-text-color;
           text-decoration: none;
+        }
 
-          &:after {
-            background: @component-example-tab-active-color;
-          }
+        &:after {
+          background: none;
         }
       }
     }
