--- a/plugins/design-system/styles/components/component-example/styles.less
+++ b/plugins/design-system/styles/components/component-example/styles.less
@@ -36,22 +36,25 @@
 
   .code-example-heading {
     background: @component-example-editor-color;
-    height: @code-example-tab-height;
+    height: 35px;
     margin-bottom: 0;
     padding-top: @code-example-heading-top-padding;
 
     &.tabs {
       height: @code-example-tab-height * 2;
       padding-top: @code-example-heading-top-padding * 2;
+
+      .tooltip-wrapper {
+        margin-right: 15px;
+        top: 0;
+      }
     }
 
     .tooltip-wrapper {
       float: right;
-      margin-right: 15px;
-    }
-
-    .code-example-tab:first-child {
-      margin-left: 20px;
+      margin-right: 25px;
+      top: 15px;
+      z-index: 5;
     }
 
     .code-example-tab {
@@ -62,6 +65,10 @@
       margin-right: 0;
       text-align: center;
       width: @code-example-tab-height * 2;
+
+      &:first-child {
+        margin-left: 20px;
+      }
 
       &.active {
         background: @component-example-tab-active-color;
@@ -74,6 +81,7 @@
       .menu-tabbed-item-label {
         align-items: center;
         display: inline-flex;
+        font-size: 0.9em;
         min-height: @code-example-tab-height;
         padding-bottom: 0;
 
