feat(DCOS-15921): Use rem for font size

--- a/plugins/design-system/styles/components/component-example/styles.less
+++ b/plugins/design-system/styles/components/component-example/styles.less
@@ -81,7 +81,7 @@
       .menu-tabbed-item-label {
         align-items: center;
         display: inline-flex;
-        font-size: 0.9em;
+        font-size: 0.9rem;
         min-height: @code-example-tab-height;
         padding-bottom: 0;
 
