fix(DCOS-15921): Fix component example CSS

--- a/plugins/design-system/styles/components/component-example/styles.less
+++ b/plugins/design-system/styles/components/component-example/styles.less
@@ -37,7 +37,7 @@
   .code-example-heading {
     background: @component-example-editor-color;
     height: 35px;
-    margin-bottom: 0;
+    margin-bottom: 0 !important;
     padding-top: @code-example-heading-top-padding;
 
     &.tabs {
@@ -91,7 +91,7 @@
         }
 
         &:after {
-          background: none;
+          background: none !important;
         }
       }
     }
