refactor(DCOS-15921): Create seperate tab components for ComponentExample

--- a/plugins/design-system/styles/components/component-example/variables.less
+++ b/plugins/design-system/styles/components/component-example/variables.less
@@ -4,11 +4,12 @@
  * Styling
  */
 
-@component-example-border-color: #e5e5e5;
-@component-example-header-color: #fafbfc;
-@component-example-tab-color: #f3f3f4;
-@component-example-tab-active-color: #dadadb;
-@component-example-tab-active-text-color: #5b6171;
-@component-example-editor-color: hsl(220, 13%, 18%);
+@code-example-border-color: #e5e5e5;
+@code-example-header-color: #fafbfc;
+@code-example-tab-color: #f3f3f4;
+@code-example-tab-active-color: #dadadb;
+@code-example-tab-active-text-color: #5b6171;
+@code-example-editor-color: hsl(220, 13%, 18%);
+@code-example-wrapper-background-color: #fff;
 @code-example-tab-height: 40px;
 @code-example-heading-top-padding: 10px;
