--- a/plugins/design-system/styles/components/component-example/styles.less
+++ b/plugins/design-system/styles/components/component-example/styles.less
@@ -1,9 +1,9 @@
 & when (@component-example-enabled) {
 
   .code-example-wrapper {
-    background-color: @white;
-    border-left: 1px solid @component-example-border-color;
-    border-right: 1px solid @component-example-border-color;
+    background-color: @code-example-wrapper-background-color;
+    border-left: 1px solid @code-example-border-color;
+    border-right: 1px solid @code-example-border-color;
     display: flex;
     flex-direction: column;
     overflow: hidden;
@@ -11,14 +11,14 @@
     position: relative;
 
     &.header {
-      background: @component-example-header-color;
-      border-bottom: 1px solid @component-example-border-color;
-      border-top: 1px solid @component-example-border-color;
+      background: @code-example-header-color;
+      border-bottom: 1px solid @code-example-border-color;
+      border-top: 1px solid @code-example-border-color;
       padding-top: 20px;
     }
 
     &.footer {
-      border-bottom: 1px solid @component-example-border-color;
+      border-bottom: 1px solid @code-example-border-color;
 
       .code-example-footer-content {
 
@@ -35,9 +35,8 @@
   }
 
   .code-example-heading {
-    background: @component-example-editor-color;
+    background: @code-example-editor-color;
     height: 35px;
-    margin-bottom: 0 !important;
     padding-top: @code-example-heading-top-padding;
 
     &.tabs {
@@ -46,23 +45,28 @@
 
       .tooltip-wrapper {
         margin-right: 15px;
-        top: 0;
+      }
+    }
+
+    &.single {
+
+      .tooltip-wrapper {
+        margin-right: 25px;
+        top: 15px;
       }
     }
 
     .tooltip-wrapper {
       float: right;
-      margin-right: 25px;
-      top: 15px;
       z-index: 5;
     }
 
-    .code-example-tab {
-      background: @component-example-tab-color;
-      border: 1px solid @component-example-border-color;
+    .code-example-tabbed-item {
+      background: @code-example-tab-color;
+      border: 1px solid @code-example-border-color;
       cursor: pointer;
+      display: inline-block;
       height: @code-example-tab-height;
-      margin-right: 0;
       text-align: center;
       width: @code-example-tab-height * 2;
 
@@ -71,28 +75,14 @@
       }
 
       &.active {
-        background: @component-example-tab-active-color;
-
-        & > .menu-tabbed-item-label {
-          color: @component-example-tab-active-text-color;
-        }
+        background: @code-example-tab-active-color;
       }
 
-      .menu-tabbed-item-label {
+      .code-example-tabbed-item-label {
         align-items: center;
         display: inline-flex;
         font-size: 0.9rem;
         min-height: @code-example-tab-height;
-        padding-bottom: 0;
-
-        &:hover {
-          color: @component-example-tab-active-text-color;
-          text-decoration: none;
-        }
-
-        &:after {
-          background: none !important;
-        }
       }
     }
   }
