--- a/plugins/design-system/styles/components/component-example/styles.less
+++ b/plugins/design-system/styles/components/component-example/styles.less
@@ -1,6 +1,7 @@
 & when (@component-example-enabled) {
+
   .ace_scrollbar-v {
-      overflow-y: auto !important;
+    overflow-y: auto !important;
   }
 
   ::-webkit-scrollbar {
@@ -8,18 +9,16 @@
   }
 
   ::-webkit-scrollbar-track {
-      box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+    box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
   }
 
   ::-webkit-scrollbar-thumb {
-      background: rgba(100, 100, 100, 0.8);
+    background: rgba(100, 100, 100, 0.8);
   }
 
-  ::-webkit-scrollbar-corner,
-  ::-webkit-scrollbar-thumb:window-inactive {
-      background: rgba(100, 100, 100, 0.4);
+  ::-webkit-scrollbar-corner {
+    background: rgba(100, 100, 100, 0.4);
   }
-
 
   .code-example-wrapper {
     background-color: @code-example-wrapper-background-color;
