feat(component-example): change tab heading color

--- a/plugins/design-system/styles/components/component-example/variables.less
+++ b/plugins/design-system/styles/components/component-example/variables.less
@@ -9,7 +9,7 @@
 @code-example-tab-color: #f3f3f4;
 @code-example-tab-active-color: #dadadb;
 @code-example-tab-active-text-color: #5b6171;
-@code-example-editor-color: hsl(220, 13%, 18%);
+@code-example-editor-color: #1d1f21;
 @code-example-wrapper-background-color: #fff;
 @code-example-tab-height: 40px;
 @code-example-heading-top-padding: 10px;
