feat(FrameworkConfiguration): flow for editing a framework

--- a/src/styles/components/menu-tabbed/styles.less
+++ b/src/styles/components/menu-tabbed/styles.less
@@ -154,6 +154,12 @@
         display: block;
       }
     }
+
+    &.menu-tabbed-item-label-with-badge {
+      display: flex;
+      justify-content: space-between;
+      padding-right: 10px;
+    }
   }
 
   .form-tabs-list {
