feat(ServiceEndpointsTab): add an endpoint tab in the service detail component
Small UI Update

Closes DCOS-18144, DCOS-18153, DCOS-18155, DCOS-18156, DCOS-18158 (+5 squashed commits)
Squashed commits:
[d1db24a] feat(ServiceEndpointsTab): add an endpoint tab in the service detail component

Small UI Update

Closes DCOS-18144, DCOS-18153, DCOS-18155, DCOS-18156, DCOS-18158
[9622ed7] feat(ServiceEndpointsTab): add an endpoint tab in the service detail component

Small UI Update

Closes DCOS-18144, DCOS-18153, DCOS-18155, DCOS-18156, DCOS-18158
[964a08b] feat(ServiceEndpointsTab) add an endpoint tab in the service detail component

This will add a new Tab in the Service Details page that will load any available endpoints for the service.

Will include more extensive testing in next PR

Closes DCOS-18144, DCOS-18153, DCOS-18155, DCOS-18156, DCOS-18158
[67ac64d] feat(ServiceEndpointsTab) add an endpoint tab in the service detail component

This will add a new Tab in the Service Details page that will load any available endpoints for the service.

Will include more extensive testing in next PR

Closes DCOS-18144, DCOS-18153, DCOS-18155, DCOS-18156, DCOS-18158
[00affe5] feat(ServiceEndpointsTab) add an endpoint tab in the service detail component

This will add a new Tab in the Service Details page that will load any available endpoints for the service.

Will include more extensive testing in next PR

Closes DCOS-18144, DCOS-18153, DCOS-18155, DCOS-18156, DCOS-18158

--- a/src/styles/index.less
+++ b/src/styles/index.less
@@ -410,6 +410,9 @@
 @import 'components/service-table/variables.less';
 @import 'components/service-table/styles.less';
 
+// Service Endpoints
+@import 'components/service-endpoints/styles.less';
+
 // Side List
 
 @import 'components/side-list/variables.less';
