feat(ServiceEndpointsTab): add an endpoint tab in the service detail component
Small UI Update

Closes DCOS-18144, DCOS-18153, DCOS-18155, DCOS-18156, DCOS-18158

--- a/src/styles/index.less
+++ b/src/styles/index.less
@@ -411,7 +411,7 @@
 @import 'components/service-table/styles.less';
 
 // Service Endpoints
-@import ‘components/service-endpoints/styles.less’;
+@import 'components/service-endpoints/styles.less';
 
 // Side List
 
