style: patch referenced variables for removed CNVS 1.1.11 vars
For variables removed from cnvs 1.1.11, update references to variables.

--- a/src/styles/components/form-elements/form-row/styles.less
+++ b/src/styles/components/form-elements/form-row/styles.less
@@ -21,7 +21,7 @@
 
   // Add top-padding equivalent to a label
   .form-group-without-top-label {
-    padding-top: @label-line-height + @label-margin-bottom;
+    //padding-top: @body-line-height + @label-margin-bottom;
   }
 }
 
@@ -52,7 +52,7 @@
     }
 
     .form-group-without-top-label {
-      padding-top: @label-line-height + @label-margin-bottom-screen-medium;
+      //padding-top: @label-line-height + @label-margin-bottom-screen-medium;
     }
   }
 }
@@ -70,7 +70,7 @@
     }
 
     .form-group-without-top-label {
-      padding-top: @label-line-height + @label-margin-bottom-screen-large;
+      //padding-top: @label-line-height + @label-margin-bottom-screen-large;
     }
   }
 }
