--- a/src/styles/components/multiple-form/styles.less
+++ b/src/styles/components/multiple-form/styles.less
@@ -208,7 +208,7 @@
       .duplicable-row-title {
         align-self: flex-start;
         color: @heading-h3-color;
-        font-size: @label-font-size * 1.2;
+        font-size: @body-font-size * 1.2;
       }
     }
   }
