--- a/src/styles/variables/variables-colors.less
+++ b/src/styles/variables/variables-colors.less
@@ -9,4 +9,6 @@
 @unknown-color: lighten(@neutral, 10);
 @warning-color: @yellow;
 @default-border-color: color-lighten(@neutral, 90);
+@neutral: @grey-dark;
+@gray: @grey-dark;
 @disabled-color: #adafb4;
