style: patch referenced variables for removed CNVS 1.1.11 vars
For variables removed from cnvs 1.1.11, update references to variables.

--- a/src/styles/variables/variables-colors.less
+++ b/src/styles/variables/variables-colors.less
@@ -9,3 +9,5 @@
 @unknown-color: lighten(@neutral, 10);
 @warning-color: @yellow;
 @default-border-color: color-lighten(@neutral, 90);
+@neutral: @grey-dark;
+@gray: @grey-dark;
