--- a/src/styles/layout/container/variables.less
+++ b/src/styles/layout/container/variables.less
@@ -1,4 +1,8 @@
-@container-enabled: true;
+/*
+ * Layout
+ */
+
+// Container Wide Width
 
 @container-wide-width:  @container-width;
 @container-wide-width-screen-small: @container-width-screen-small;
