style(sidebar): update sidebar layout classes
Removed .pod-narrow from sidebar to align with new CNVS layout variables. Future improvements to follow.

--- a/src/styles/layout/sidebar/variables.less
+++ b/src/styles/layout/sidebar/variables.less
@@ -60,19 +60,19 @@
 
 // Margin Left
 
-@sidebar-section-header-margin-left: -@pod-margin-left * @pod-narrow-margin-left-scale;
-@sidebar-section-header-margin-left-screen-small: -@pod-margin-left-screen-small * @pod-narrow-margin-left-scale;
-@sidebar-section-header-margin-left-screen-medium: -@pod-margin-left-screen-medium * @pod-narrow-margin-left-scale;
-@sidebar-section-header-margin-left-screen-large: -@pod-margin-left-screen-large * @pod-narrow-margin-left-scale;
-@sidebar-section-header-margin-left-screen-jumbo: -@pod-margin-left-screen-jumbo * @pod-narrow-margin-left-scale;
+@sidebar-section-header-margin-left: -@pod-margin-left;
+@sidebar-section-header-margin-left-screen-small: -@pod-margin-left-screen-small;
+@sidebar-section-header-margin-left-screen-medium: -@pod-margin-left-screen-medium;
+@sidebar-section-header-margin-left-screen-large: -@pod-margin-left-screen-large;
+@sidebar-section-header-margin-left-screen-jumbo: -@pod-margin-left-screen-jumbo;
 
 // Margin Right
 
-@sidebar-section-header-margin-right: -@pod-margin-right * @pod-narrow-margin-right-scale;
-@sidebar-section-header-margin-right-screen-small: -@pod-margin-right-screen-small * @pod-narrow-margin-right-scale;
-@sidebar-section-header-margin-right-screen-medium: -@pod-margin-right-screen-medium * @pod-narrow-margin-right-scale;
-@sidebar-section-header-margin-right-screen-large: -@pod-margin-right-screen-large * @pod-narrow-margin-right-scale;
-@sidebar-section-header-margin-right-screen-jumbo: -@pod-margin-right-screen-jumbo * @pod-narrow-margin-right-scale;
+@sidebar-section-header-margin-right: -@pod-margin-right;
+@sidebar-section-header-margin-right-screen-small: -@pod-margin-right-screen-small;
+@sidebar-section-header-margin-right-screen-medium: -@pod-margin-right-screen-medium;
+@sidebar-section-header-margin-right-screen-large: -@pod-margin-right-screen-large;
+@sidebar-section-header-margin-right-screen-jumbo: -@pod-margin-right-screen-jumbo;
 
 // Padding Left
 
@@ -137,19 +137,19 @@
 
 // Margin Left
 
-@sidebar-menu-item-margin-left: -@pod-margin-left * @pod-narrow-margin-left-scale;
-@sidebar-menu-item-margin-left-screen-small: -@pod-margin-left-screen-small * @pod-narrow-margin-left-scale;
-@sidebar-menu-item-margin-left-screen-medium: -@pod-margin-left-screen-medium * @pod-narrow-margin-left-scale;
-@sidebar-menu-item-margin-left-screen-large: -@pod-margin-left-screen-large * @pod-narrow-margin-left-scale;
-@sidebar-menu-item-margin-left-screen-jumbo: -@pod-margin-left-screen-jumbo * @pod-narrow-margin-left-scale;
+@sidebar-menu-item-margin-left: -@pod-margin-left;
+@sidebar-menu-item-margin-left-screen-small: -@pod-margin-left-screen-small;
+@sidebar-menu-item-margin-left-screen-medium: -@pod-margin-left-screen-medium;
+@sidebar-menu-item-margin-left-screen-large: -@pod-margin-left-screen-large;
+@sidebar-menu-item-margin-left-screen-jumbo: -@pod-margin-left-screen-jumbo;
 
 // Margin Right
 
-@sidebar-menu-item-margin-right: -@pod-margin-right * @pod-narrow-margin-right-scale;
-@sidebar-menu-item-margin-right-screen-small: -@pod-margin-right-screen-small * @pod-narrow-margin-right-scale;
-@sidebar-menu-item-margin-right-screen-medium: -@pod-margin-right-screen-medium * @pod-narrow-margin-right-scale;
-@sidebar-menu-item-margin-right-screen-large: -@pod-margin-right-screen-large * @pod-narrow-margin-right-scale;
-@sidebar-menu-item-margin-right-screen-jumbo: -@pod-margin-right-screen-jumbo * @pod-narrow-margin-right-scale;
+@sidebar-menu-item-margin-right: -@pod-margin-right;
+@sidebar-menu-item-margin-right-screen-small: -@pod-margin-right-screen-small;
+@sidebar-menu-item-margin-right-screen-medium: -@pod-margin-right-screen-medium;
+@sidebar-menu-item-margin-right-screen-large: -@pod-margin-right-screen-large;
+@sidebar-menu-item-margin-right-screen-jumbo: -@pod-margin-right-screen-jumbo;
 
 // Padding Left
 
@@ -393,10 +393,10 @@
 @sidebar-dock-container-padding-vertical-screen-large: @pod-margin-top-screen-large * @pod-short-margin-top-scale;
 @sidebar-dock-container-padding-vertical-screen-jumbo: @pod-margin-top-screen-jumbo * @pod-short-margin-top-scale;
 
-@sidebar-dock-container-padding-horizontal: @pod-margin-left * @pod-narrow-margin-left-scale;
-@sidebar-dock-container-padding-horizontal-screen-small: @pod-margin-left-screen-small * @pod-narrow-margin-left-scale;
-@sidebar-dock-container-padding-horizontal-screen-medium: @pod-margin-left-screen-medium * @pod-narrow-margin-left-scale;
-@sidebar-dock-container-padding-horizontal-screen-large: @pod-margin-left-screen-large * @pod-narrow-margin-left-scale;
-@sidebar-dock-container-padding-horizontal-screen-jumbo: @pod-margin-left-screen-jumbo * @pod-narrow-margin-left-scale;
+@sidebar-dock-container-padding-horizontal: @pod-margin-left;
+@sidebar-dock-container-padding-horizontal-screen-small: @pod-margin-left-screen-small;
+@sidebar-dock-container-padding-horizontal-screen-medium: @pod-margin-left-screen-medium;
+@sidebar-dock-container-padding-horizontal-screen-large: @pod-margin-left-screen-large;
+@sidebar-dock-container-padding-horizontal-screen-jumbo: @pod-margin-left-screen-jumbo;
 
 @sidebar-dock-container-border-color: color-lighten(@neutral, -50);
