style(sidebar): adjust sidebar section header styling
Update minor styles of sidebar seciton header styling to align with UI kit.

--- a/src/styles/layout/sidebar/styles.less
+++ b/src/styles/layout/sidebar/styles.less
@@ -69,14 +69,11 @@
       align-items: center;
       color: @sidebar-section-header-color;
       display: flex;
-      font-size: @sidebar-section-header-font-size;
-      font-weight: @sidebar-section-header-font-weight;
       height: @sidebar-section-header-height;
-      line-height: @sidebar-section-header-line-height;
       margin: @sidebar-section-header-margin-top @sidebar-section-header-margin-right @sidebar-section-header-margin-bottom @sidebar-section-header-margin-left;
       padding-left: @sidebar-section-header-padding-left;
       padding-right: @sidebar-section-header-padding-right;
-      text-transform: @sidebar-section-header-text-transform;
+      text-transform: capitalize;
 
       &:empty {
         display: none;
