--- a/src/styles/layout/sidebar/variables.less
+++ b/src/styles/layout/sidebar/variables.less
@@ -22,7 +22,7 @@
  * Sidebar Section
  */
 
-@sidebar-background-color: color-lighten(@neutral, -40);
+@sidebar-background-color: @grey-dark;
 
 /*
  * Sidebar Section Header
@@ -30,19 +30,8 @@
 
 /* Styling */
 
-@sidebar-section-header-color: color-lighten(@neutral, 40);
+@sidebar-section-header-color: @grey-light-darken-2;
 @sidebar-section-header-font-weight: 600;
-@sidebar-section-header-text-transform: uppercase;
-
-/* Text Size */
-
-// Font Size
-
-@sidebar-section-header-font-size: 0.9rem;
-
-// Line Height
-
-@sidebar-section-header-line-height: 0.9rem;
 
 /* Layout */
 
