feat(FrameworkConfiguration): components for framework configuration
This provides the components for framework configuration. These
components are used when editing and deploying a framework, for
example cassandra. It also adds a dependency from Mozilla called
react-jsonschema-form.

Closes DCOS-18201.

--- a/src/styles/components/buttons/styles.less
+++ b/src/styles/components/buttons/styles.less
@@ -19,6 +19,11 @@
       &.button-block {
         display: block;
       }
+
+      // to render exact same side-by-side with inline-flex siblings
+      &.button-inline-flex {
+        display: inline-flex;
+      }
     }
   }
 
