--- a/src/styles/components/modal/full-screen/styles.less
+++ b/src/styles/components/modal/full-screen/styles.less
@@ -118,10 +118,17 @@
     text-align: center;
   }
 
+  .modal-full-screen-header-with-sub-title {
+    bottom: 8px; // approximation of canvas small line-height / 2
+    height: @modal-full-screen-header-title-line-height;
+    position: relative;
+  }
+
   .modal-full-screen-actions {
     align-items: center;
     display: flex;
     flex: 0 0 auto;
+    z-index: 1;
   }
 
   .modal-full-screen-actions-primary {
@@ -233,6 +240,10 @@
 
     .modal-full-screen-header-title {
       line-height: @modal-full-screen-header-title-line-height-screen-large;
+    }
+
+    .modal-full-screen-header-with-sub-title {
+      height: @modal-full-screen-header-title-line-height-screen-large;
     }
 
     .modal-full-screen-actions-primary {
