--- a/src/styles/index.less
+++ b/src/styles/index.less
@@ -293,6 +293,13 @@
 @import 'components/form-elements/form-section/variables.less';
 @import 'components/form-elements/form-section/styles.less';
 
+// Form Elements: Form Components
+
+@import 'components/form-elements/form-components/field-input/styles.less';
+@import 'components/form-elements/form-components/field-input/variables.less';
+@import 'components/form-elements/form-components/field-select/styles.less';
+@import 'components/form-elements/form-components/field-select/variables.less';
+
 // Icons
 
 @import 'components/icons/variables.less';
@@ -467,6 +474,10 @@
 
 @import 'components/user-account-dropdown/variables.less';
 @import 'components/user-account-dropdown/styles.less';
+
+// Framework Configuration
+
+@import 'components/framework-configuration/styles.less';
 
 /*
  * Views
